--- a/app/css/slider.css
+++ b/app/css/slider.css
@@ -181,3 +181,116 @@ p {
   height: 100vh;
   overflow-y: hidden;
 }
+
+textarea {
+  width: 75%;
+  height: 45%;
+  background-color: transparent;
+  color: white;
+  border: none;
+}
+
+textarea.title {
+  background-color: transparent;
+  border: none;
+  text-align: center;
+}
+
+textarea.video {
+  background-color: transparent;
+  border: none;
+  text-align: center;
+  height: 60%;
+}
+
+
+/*
+ * Video
+ *
+ */
+
+* {
+  box-sizing: border-box;
+}
+
+.video-background {
+  background: #000;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -99;
+}
+
+.video-foreground, .video-background iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+#vidtop-content {
+  top: 0;
+  color: #fff;
+}
+
+.vid-info {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 40%;
+  background: rgba(0, 0, 0, 0.2);
+  color: #fff;
+  padding: 1%;
+}
+
+.vid-info h1 {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-top: 0;
+  line-height: 1.2;
+}
+
+.vid-info a {
+  display: block;
+  color: #fff;
+  text-decoration: none;
+  background: rgba(0, 0, 0, 0.5);
+  transition: .6s background;
+  border-bottom: none;
+  margin: 1rem auto;
+  text-align: center;
+}
+
+@media (min-aspect-ratio: 16/9) {
+  .video-foreground {
+    height: 300%;
+    top: -100%;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+  .video-foreground {
+    width: 300%;
+    left: -100%;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .vid-info {
+    width: 50%;
+    padding: .5rem;
+  }
+  .vid-info h1 {
+    margin-bottom: .2rem;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .vid-info .acronym {
+    display: none;
+  }
+}
