--- a/app/css/video.css
+++ b/app/css/video.css
@@ -12,7 +12,7 @@ video {
   width: auto;
   height: auto;
   z-index: -100;
-  transform: translateX(-50%) translateY(-50%);  
+  transform: translateX(-50%) translateY(-50%);
   background-size: cover;
   transition: 1s opacity;
 }
@@ -72,6 +72,8 @@ a:hover {
   background: rgba(0, 0, 0, 0.9);
 }
 
+/*
+
 @media screen and (max-width: 500px) {
   div {
     width: 70%;
@@ -79,10 +81,9 @@ a:hover {
 }
 
 @media screen and (max-device-width: 800px) {
-  html {
-    background: url(https://thenewcode.com/assets/images/polina.jpg) #000 no-repeat center center fixed;
-  }
   #bgvid {
     display: none;
   }
 }
+
+*/
