--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 body {
 	background: white;
 	color: gray;
+	font-family: 'Roboto', sans-serif;
 }
 
 .site-logo {
