Adds draw funtionality, it remains activating the sync functionality though

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -23,3 +23,17 @@ body {
     opacity: 0.4;
   }
 }
+
+.draw-button {
+  position: absolute;    
+  top: 2%;
+  right: 2%;
+  z-index: 10000;
+}
+
+.back-button {
+  position: absolute;    
+  top: 12%;
+  right: 2%;
+  z-index: 10000;
+}
