--- a/app/css/draw.css
+++ b/app/css/draw.css
@@ -14,11 +14,16 @@
   width: inherit;
 }
 
+/*.canvas {
+  width: 80%;
+  height: 80%
+}*/
+
 #toolbar {
   width: 100%;
   height: 50px;
   padding: 10px;
-  position: fixed;
+  position: absolute;
   top: 0;
   background: #2f2f2f;
   color: white;
